# mkldnn

./: CMakeLists.txt
cmake/: OpenMP.cmake
src/: CMakeLists.txt
